--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-    "name": "todo-app",
-    "version": "1.0.0",
-    "description": "A Simple TODO app using Node.js, Express and MySQL.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "iTonzDev",
-    "license": "ISC",
-    "devDependencies": {
-        "express": "^4.15.4"
-    }
+  "name": "todo-app",
+  "version": "1.0.0",
+  "description": "A Simple TODO app using Node.js, Express and MySQL.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "iTonzDev",
+  "license": "ISC",
+  "devDependencies": {
+    "express": "^4.15.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.0"
+  }
 }
