--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.15.4"
   },
   "dependencies": {
-    "body-parser": "^1.18.0"
+    "body-parser": "^1.18.0",
+    "mysql": "^2.14.1"
   }
 }
